alle sider validere

--- a/product.html
+++ b/product.html
@@ -27,7 +27,9 @@
             <li><a href="productlist.html">Nike</a></li>
             <li>Model</li>
         </ol>
-        <img src="" alt="" />
+        <!-- <img src="" alt="" /> -->
+        <img src="placeholder.jpg" alt="Placeholder Image">
+
         <section class="purchaseBox">
             <h3>Navn</h3>
             <p>Brandname</p>
@@ -53,7 +55,8 @@
                 <dt>Inventory number</dt>
                 <dd>ID</dd>
             </dl>
-            <h1>Brand</h1>
+            <!-- <h1>Brand</h1> -->
+            <h3>Brand</h3>
             <p>Brand details</p>
         </section>
     </main>
