--- a/productlist.html
+++ b/productlist.html
@@ -25,7 +25,7 @@
         <template>
             <article class="smallProduct">
                 <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-                    alt="Sahara Team India Fanwear Round Neck Jersey" />
+                    alt="Sahara Team India Fanwear Round Neck Jersey">
                 <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
                 <p class="subtle">Tshirts | Nike</p>
                 <p class="price">DKK <span>1595</span>,-</p>
@@ -37,7 +37,11 @@
             </article>
         </template>
     </main>
-    <section class="productlistcontainer">Produktliste:</section>
+    <section class="productlistcontainer">
+        <h2>Produktliste:</h2>
+        <!-- Your content goes here -->
+    </section>
+
     <script src="productliste.js"></script>
 </body>
 
